apps/70-tools/argocd-image-updater/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-image-updater
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: image-updater.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-image-updater-webhook
                port:
                  number: 8080
  tls:
    - hosts:
        - image-updater.truxonline.com
      secretName: argocd-image-updater-tls
